init: project initialized

--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
      </div>
     </header>
     
-    <script src="/script/login.js"></script>
+    <script src="script/login.js"></script>
 </body>
 </html>
