--- a/home.html
+++ b/home.html
@@ -135,8 +135,8 @@
     </section>
     </header>
     
-    <script src="./script/machine.js"></script>
-    <script src="./script/addMoney.js"></script>
-    <script src="./script/cashout.js"></script>
+    <script src="/script/machine.js"></script>
+    <script src="/script/addMoney.js"></script>
+    <script src="/script/cashout.js"></script>
 </body>
 </html>
