--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="right">
-                <button class="btn btn-soft"><a href="/index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</a></button>
+                <button class="btn btn-soft"><a href="index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</a></button>
             </div>
         </section>
 
@@ -160,9 +160,9 @@
     </section>
     </header>
     
-    <script src="/script/machine.js"></script>
-    <script src="/script/addMoney.js"></script>
-    <script src="/script/cashout.js"></script>
-    <script src="/script/sendMoney.js"></script>
+    <script src="script/machine.js"></script>
+    <script src="script/addMoney.js"></script>
+    <script src="script/cashout.js"></script>
+    <script src="script/sendMoney.js"></script>
 </body>
 </html>
